Fixed spacing between label text and arrow

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Kumbh+Sans', sans-serif;
+    font-family: 'Kumbh Sans', sans-serif;
 }
 
 /* base styles */
@@ -24,7 +24,6 @@ h2 {
     align-items: flex-end;
     grid-column: 4/6;
     font-size: 3.6em;
-    font-family: 'Kumbh+Sans';
     font-weight: 700;
 }
 
@@ -34,7 +33,8 @@ h2 {
 }
 
 .container {
-    max-width: 400px;
+    width: 350px;
+    /* max-width: 500px; */
     height: 500px;
     margin: 20px auto;
     border: 2px solid var(--blue-text);
@@ -55,6 +55,7 @@ h2 {
     align-items: flex-start;
     position: absolute;
     top: -51.5%;
+    left: 11%;
     min-width: 225px;
 }
 
@@ -65,7 +66,7 @@ h2 {
     grid-column: 2/6;
     grid-row: 2;
     position: absolute;
-    /* top: -45%; */
+    left: 11%;
     width: 225px;
 }
 
@@ -78,7 +79,7 @@ h2 {
 }
 
 .accordion-label, .accordion-content {
-    padding: 14px 20px;
+    padding: 10px 0;
 }
 
 .accordion-label {
@@ -87,6 +88,7 @@ h2 {
     position: relative;
     transition: background 0.2s;
     font-size: 1.1em;
+    border-bottom: 0.05em solid var(--fog);
 }
 
 .accordion-label:hover {
@@ -98,7 +100,7 @@ h2 {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    right: 14px;
+    right: 0;
     width: 8px;
     height: 6px;
     font-size: 1.5em;
@@ -121,7 +123,7 @@ h2 {
     --blue-text: hsl(238, 29%, 16%);
     --red-text: hsl(14, 88%, 65%);
     --gray-blue-text: hsl(237, 12%, 33%);
-    --fog: hsl(240, 6%, 50%);
+    --fog: hsla(240, 52%, 89%, 0.8);
     --dividers: hsl(240, 5%, 91%);
 
     /* background gradient colors */
